 9. If a list of items has some with, and some without, images then don't assign
    a blank image to those without.
10. Fix SVG icons when in grid.
11. Dim some buttons if nothing in queue, or no player conected.
12. Fix rating not showing unless 'landscape'
13. Update translations.
14. Add Danish translation - thanks to Jens Svalgaard Kohrt

1.5.0
-----
 1. When LMS is set to list a multi-CD album as 1 album, then visually split up
    the CDs' track listings, and allow to play individual CDs.
 2. Add a play icon over cover-art of current track in queue.
 3. Add 'More' action to subtoolbar for artist and albums to acces online
    services, biography, artist photos, and album review.
 4. Group synced players in 'Manage players' dialog.
 5. Set max-width for list in 'Manage players' dialog.
 6. Center-align text in grid view.
 7. Better layout for advanced search results.
 8. Update axios, vue, vuetify, and vuex libraries.
 9. Show add/play buttons on hover of browse items with desktop browsers.
10. Add colour to current track in queue.
11. Get list of rescan options from LMS.
12. Remove confirmation dialog when asking to rescan.
13. Reduce now-playing image fade-in duration from 25ms to 15ms.
14. Remove 'Playlists' from search dialog. This only searched playlist names,
    not content.
15. Fix toggling of all alarms via icon.
16. Allow text of virtual libraries menu to extend onto 2 lines.
17. Add more text to confirmation dialog when deleting a virtual library.
18. Don't toggle between 'i' and play/pause button when showing track info in
    mobile layout.
19. Use active colour for 'i' and full-screen buttons when they are active.
20. Update web page's title to contain current song.
21. In portrait now-playing, allow 3 lines for 'remote_title'
22. Add option for larger icons.
23. Add shutdown and restart actions to server settings dialog.
24. Add 'prompt' parameter to custom actions.
25. Remove 'Close' button from info view in now-playing - click on toolbar icon